--- a/views/synapsearch.hbs
+++ b/views/synapsearch.hbs
@@ -14,7 +14,7 @@
           name="q"
           id="q"
           class="h-16 focus:ring-zmagenta focus:border-zmagenta bg-black text-zorange font-thin tracking-tighter block w-full rounded-none rounded-l-md pl-10 sm:text-xl border-gray-300 lg:text-3xl"
-          placeholder="search artist, albums and songs"
+          value="{{query}}"
           required autofocus
           />
       </div>
@@ -72,14 +72,18 @@
             {{#each artists}}
               <a
                 href="/music/artist/{{this.id}}"
-                class="text-sm font-ligth text-white"
+                class="text-sm font-ligth text-white truncate"
               >{{this.name}} </a>
             {{/each}}
           </span>
-          <span class="truncate">
-            <form action="/synapsearch">
-              input
-              <button type="submit" class="mt-3">
+          <span >          
+              <form action="/synapsearch" method="POST">
+              <input type="text" name="name" value="{{name}}" hidden />
+              <input type="text" name="artists" value="{{#each artists}} {{this.name}} {{/each}}" hidden />
+              <input type="text" name="album" value="{{this.album.name}}" hidden />
+              <input type="text" name="cover" value="{{this.album.images.2.url}}" hidden />
+              <input type="text" name="preview_url" value="{{this.preview_url}}" hidden />
+              <button type="submit" class="mt-3" id="addBtn" onclick="return noRefresh()">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-zmagenta" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-11a1 1 0 10-2 0v2H7a1 1 0 100 2h2v2a1 1 0 102 0v-2h2a1 1 0 100-2h-2V7z" clip-rule="evenodd" />
                 </svg>
@@ -100,6 +104,41 @@
   </ul>
 </div>
 
+<h1
+  class="text-6xl mb-5 text-zorange font-thin tracking-tighter lg:text-7xl"
+>Add</h1>
+
+<div class="mb-5" id="add">
+  <ul
+    role="list"
+    class="grid grid-cols-2 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 lg:grid-cols-5 xl:gap-x-8"
+  >
+    {{#each allpool}}
+      <li class="relative">
+        <div
+          class="group block w-full aspect-w-10 aspect-h-7 bg-zorange focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-offset-gray-100 focus-within:ring-zorange overflow-hidden"
+        >
+        {{!-- /music/album/{{this.album.id}} --}}
+          <a href=""><img 
+              src="{{this.cover}}"
+              alt=""
+              class="object-cover pointer-events-none group-hover:opacity-75"
+            /></a>
+        </div>
+        <div class="flex justify-between">
+          <span class="truncate w-5/6">
+            <p
+              class="mt-2 block text-md font-medium text-zmagenta pointer-events-none"
+            >{{this.name}}</p>
+              <p
+                class="text-sm font-ligth text-white"
+              >{{this.artists}}</p>
+          </span> 
+        </div>
+      </li>
+    {{/each}}
+  </ul>
+</div>
 <div>
   <br><br><br><br><br><br><br>
 </div>
